--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,7 @@
 					<nav class='drop-menu'>Portfolio
 						<ul>
 							<li>
-								<a href='http://ibnuwebproject.github.com/project1/new-test.html'>File-1</a>
+								<a href='new-test.html'>File-1</a>
 							</li>
 						</ul>
 					</nav>
@@ -27,8 +27,8 @@
 					<nav class='drop-menu'>
 						Webpage
 						<ul>
-							<li><a href='http://ibnuwebproject.github.com/project1/desk_diri.html'>Deskripsi Diri</a></li>
-							<li><a href='http://ibnuwebproject.github.com/project1/form_vc.html'>Form Biodata</a></li>
+							<li><a href='desk_diri.html'>Deskripsi Diri</a></li>
+							<li><a href='form_vc.html'>Form Biodata</a></li>
 						</ul>
 					</nav>
 				</div>
